@@ -66,25 +66,45 @@ ScreenClosestPoint(const RasterPoint &p1, const RasterPoint &p2,
   }
 }
 
+/*
+ * Divide x by 2^12, rounded to nearest integer.
+ */
 static int
 roundshift(int x)
 {
   if (x > 0) {
-    x += 512;
+    x += 2048;
   } else if (x < 0) {
-    x -= 512;
+    x -= 2048;
   }
-  return x >> 10;
+  return x >> 12;
 }
 
 void
-PolygonRotateShift(RasterPoint *poly, const int n,
+PolygonRotateShift(RasterPoint *poly,
+                   const int n,
                    const RasterPoint shift,
-                   Angle angle, const int scale)
+                   Angle angle,
+                   int scale,
+                   const bool use_fast_scale)
 {
   const int xs = shift.x, ys = shift.y;
-  const int cost = Layout::FastScale(angle.ifastcosine() * scale) / 100;
-  const int sint = Layout::FastScale(angle.ifastsine() * scale) / 100;
+  if (use_fast_scale)
+    scale = Layout::FastScale(scale);
+  /*
+   * About the scaling...
+   *  - We want to divide the raster points by 100 in order to scale the
+   *    range +/-50 to the size 'scale'.
+   *  - The fast trig functions return 10-bit fraction fixed point values.
+   *    I.e. we need to divide by 2^10 to convert to regular integers.
+   *  - In total we need to divide by (2^10)*100. This is equal to (2^12)*25.
+   *  - For precision we want to divide as late as possible, but for speed
+   *    we want to avoid the division operation. Therefore we divide by 25
+   *    early but outside the loop, and divide by 2^12 late, inside the
+   *    loop using roundshift.
+   */
+  const int cost = angle.ifastcosine() * scale / 25;
+  const int sint = angle.ifastsine() * scale / 25;
 
   RasterPoint *p = poly;
   const RasterPoint *pe = poly + n;
